<resources>
    <string name="app_name">Sport Book</string>
    <string name="logo">Sport Book</string>
    <string name="btn_sign_in">Войти</string>
    <string name="btn_register">Регистрация</string>
    <string name="btn_recover_password">Сбросить пароль</string>
    <string name="txt_made">Made by:\nOsminkin Nikita\nLobanov Aleksandr</string>
    <string name="sign_up">Записаться в зал</string>
    <string name="sign_out">Отменить запись</string>
    <string name="question_text">
        1. Зарегистрируйтесь или авторизуйтесь в приложении нажав на соответствующие кнопки. В случае потери пароля можно его восстановить нажав на кнопку восстановления пароля.\n2. На странице после авторизации вы можете выбрать необходимый вам день для занятий из списка.\n3. Далее необходимо выбрать время для занятий.\n4. В следующем шаге надо выбрать зал для занятий.\n5. После выбора зала открывается страница с доступными свободными местами и кнопками бронирования и отмены места в зале
    </string>
</resources>