<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootElementMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gym1"
    android:foregroundGravity="center"
    android:visibility="visible"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="20dp"
        android:background="@color/logo_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="3dp"
                app:srcCompat="@drawable/logo"
                app:tint="@color/logo_badge" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/prompt_semibold"
                android:text="@string/logo"
                android:textColor="@color/logo_txt"
                android:textSize="34sp"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewQuestion"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="3dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/question"
            app:tint="@color/logo_badge"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_bottom"
        android:layout_marginBottom="110dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/prompt"
            android:text="@string/btn_sign_in"
            app:backgroundTint="@color/btn"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/prompt"
            android:text="@string/btn_register"
            app:backgroundTint="@color/btn" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/prompt"
        android:gravity="center"
        android:text="@string/txt_made"
        android:textColor="@color/made"
        android:textSize="15sp" />

</RelativeLayout>