<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintElementSignUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="20dp"
        android:id="@+id/linearLayoutCap"
        android:background="@color/logo_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="3dp"
                app:srcCompat="@drawable/logo"
                app:tint="@color/logo_badge" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/prompt_semibold"
                android:text="@string/logo"
                android:textColor="@color/logo_txt"
                android:textSize="34sp"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewQuestion"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            app:srcCompat="@drawable/question"
            app:tint="@color/logo_badge" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayoutText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/back_top"
        android:paddingLeft="15dp"
        android:paddingTop="7dp"
        android:paddingBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCap">

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/prompt"
            android:text="TextView"
            android:textColor="@color/name_txt"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutCountChildren"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutText">

        <TextView
            android:id="@+id/textViewInfoInSignUpPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/logo_back"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutCountChildren"
        android:paddingStart="15dp">

        <TextView
            android:id="@+id/textViewInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/logo_back"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:backgroundTint="@color/btn" />

        <Button
            android:id="@+id/btnUnsubscribe"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            app:backgroundTint="@color/btn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutInfo">

        <ListView
            android:id="@+id/usersInHall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#27006893"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>